objects/BMCServiceDesk__Knowledge_CI_Link__c.object
<CustomObject>
    <description>This object allows you to store data linking between Knowledge articles and configuration items.</description>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Configuration_Item__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?id=1010&amp;cmdbRecordId=&quot;+ BMCServiceDesk__FKConfiguration_Item__r.Id , BMCServiceDesk__FKConfiguration_Item__r.Name , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Item~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
        <description>This field stores the foreign key value of the linked configuration item</description>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Knowledge CI Links</relationshipLabel>
        <relationshipName>Knowledge_CI_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_ID__c</fullName>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Name__c</fullName>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Knowledge_Article__c</fullName>
        <description>This field stores the foreign key value of the linked knowledge article</description>
        <label>Knowledge Article</label>
        <referenceTo>BMCServiceDesk__KM_KnowledgeArticle__c</referenceTo>
        <relationshipLabel>Linked Services and CIs</relationshipLabel>
        <relationshipName>Knowledge_CI_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Knowledge CI Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>